# weather_tracking

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  main.py  nginx.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-02-03_initial.py  2025-02-04_user_session.py  2025-02-24_initial.py  2025-03-09_initial.py
frontend/static/: cards.js  index.js  login.js  register.js
frontend/templates/: index.html  login.html  register.html
src/: app.py  config.py  database.py  dependencies.py  exceptions.py
src/locations/: dao.py  models.py  open_weather_service.py  schemas.py  service.py
src/users/: dao.py  models.py  routes.py  schemas.py  service.py
tests/: conftest.py  http_client_mock.py  test_weather_api.py
weather/: __init__.py  app.py  config.py  database.py  database_m.py  dependencies.py  exceptions.py  logger.py  settings.py
weather/auth/: utils.py
weather/http_client/: aiohttp_client.py  base.py  exceptions.py  implementations.py
weather/locations/: adapters.py  dao.py  models.py  open_weather_service.py  routes.py  schemas.py  service.py
weather/users/: dao.py  models.py  routes.py  schemas.py  service.py
weather/weather_client/: base.py  exceptions.py  open_weather_client.py  schemas.py  utils.py
