[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["ratmeow <rtm_bis@mail.ru>"]
readme = "README.md"
packages = [{include = "weather"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.8"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
uvicorn = "^0.34.0"
python-jose = "^3.3.0"
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
jinja2 = "^3.1.5"
aiohttp = "^3.11.13"


[tool.poetry.group.develop.dependencies]
requests = "^2.32.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
